[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/GUI/PlayerStatus.gd" type="Script" id=1]
[ext_resource path="res://Scenes/GUI/SpellInterface.gd" type="Script" id=2]
[ext_resource path="res://Scenes/GUI/ChatBox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/GUI/PartyInterface.tscn" type="PackedScene" id=4]

[node name="GUI" type="Control"]
margin_right = 1280.0
margin_bottom = 720.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Placeholder BG" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0117647, 0, 0.0823529, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Placeholders" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="minimap PLACEHOLDER" type="ColorRect" parent="Placeholders"]
margin_left = 1071.0
margin_top = 39.0
margin_right = 1242.0
margin_bottom = 195.0
color = Color( 0.0784314, 0.0823529, 0.207843, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="P text" type="Label" parent="Placeholders/minimap PLACEHOLDER"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "WHERE AM I?
\"minimap\"?"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpellInterface" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -80.0
margin_top = -112.0
margin_right = 192.0
margin_bottom = -48.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="SpellInterface"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0.0156863, 0.411765, 1 )

[node name="MarginContainer" type="MarginContainer" parent="SpellInterface"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="SpellInterface/MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 262.0
margin_bottom = 54.0

[node name="SpellButton1" type="Button" parent="SpellInterface/MarginContainer/HBoxContainer"]
margin_right = 60.0
margin_bottom = 44.0
rect_min_size = Vector2( 60, 0 )
text = "City1"

[node name="SpellButton2" type="Button" parent="SpellInterface/MarginContainer/HBoxContainer"]
margin_left = 64.0
margin_right = 124.0
margin_bottom = 44.0
rect_min_size = Vector2( 60, 0 )
text = "City2"

[node name="SpellButton3" type="Button" parent="SpellInterface/MarginContainer/HBoxContainer"]
margin_left = 128.0
margin_right = 188.0
margin_bottom = 44.0
rect_min_size = Vector2( 60, 0 )
text = "City3"

[node name="SpellButton4" type="Button" parent="SpellInterface/MarginContainer/HBoxContainer"]
margin_left = 192.0
margin_right = 252.0
margin_bottom = 44.0
rect_min_size = Vector2( 60, 0 )
text = "Recall"

[node name="ChatBox" parent="." instance=ExtResource( 3 )]
margin_left = 64.0
margin_top = -248.0
margin_right = 414.0
margin_bottom = -48.0

[node name="PartyInterface" parent="." instance=ExtResource( 4 )]
margin_left = 48.0
margin_top = 32.0
margin_right = 283.0
margin_bottom = 379.0

[node name="PlayerStatus" type="Control" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -184.0
margin_top = -160.0
margin_right = -72.0
margin_bottom = -48.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="PlayerStatus"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.301961, 0.286275, 0.286275, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="PlayerStatus"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="PlayerStatus/MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 102.0
margin_bottom = 102.0
alignment = 1

[node name="PlayerLabel" type="Label" parent="PlayerStatus/MarginContainer/VBoxContainer"]
margin_top = 3.0
margin_right = 92.0
margin_bottom = 17.0
text = "Name - LXX"

[node name="ManaLabel" type="Label" parent="PlayerStatus/MarginContainer/VBoxContainer"]
margin_top = 21.0
margin_right = 92.0
margin_bottom = 35.0
text = "Mana: "

[node name="RepLabel" type="Label" parent="PlayerStatus/MarginContainer/VBoxContainer"]
margin_top = 39.0
margin_right = 92.0
margin_bottom = 53.0
text = "Rep: "

[node name="WalletLabel" type="Label" parent="PlayerStatus/MarginContainer/VBoxContainer"]
margin_top = 57.0
margin_right = 92.0
margin_bottom = 71.0
text = "Wallet: "

[node name="ZoneLabel" type="Label" parent="PlayerStatus/MarginContainer/VBoxContainer"]
margin_top = 75.0
margin_right = 92.0
margin_bottom = 89.0
text = "Zone Name"

[connection signal="pressed" from="SpellInterface/MarginContainer/HBoxContainer/SpellButton1" to="SpellInterface" method="_on_SpellButton1_pressed"]
[connection signal="pressed" from="SpellInterface/MarginContainer/HBoxContainer/SpellButton2" to="SpellInterface" method="_on_SpellButton2_pressed"]
[connection signal="pressed" from="SpellInterface/MarginContainer/HBoxContainer/SpellButton3" to="SpellInterface" method="_on_SpellButton3_pressed"]
[connection signal="pressed" from="SpellInterface/MarginContainer/HBoxContainer/SpellButton4" to="SpellInterface" method="_on_SpellButton4_pressed"]
